--- a/src/app.css
+++ b/src/app.css
@@ -10,5 +10,5 @@ html {
 }
 
 body {
-	@apply bg-gray-50 text-gray-800 antialiased;
+	@apply bg-gray-50 text-gray-800 antialiased dark:bg-gray-900;
 }
